--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<button id="howToPlayBtn">How To Play</button>
-<button id="privacyBtn">Privacy Policy</button>
+  
+  <div id="wpmDisplay" style="color: green; font-size: 18px; margin: 10px 0;">
+    . . . /wpm
+  </div>
+
+  <button id="howToPlayBtn">How To Play</button>
+  <button id="privacyBtn">Privacy Policy</button>
 
   <div class="container">
     <h1>Unscrub</h1>
