--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -36,14 +36,14 @@
   <hr>
   <div class="container">
     <p>
-      At Unscrub, we respect your privacy. We do not collect, sell, or store any of your personal data.  
-      Everything you do on our site stays completely private.
+      While you play Unscrub, we respect your privacy. We do not collect, sell, or store any of your personal data.  
+      Everything you do on our site stays completely private. Not even the creator can see it.
     </p>
     <p>
       Thank you for visiting! We promise your information is safe and secure.
     </p>
   </div>
   <hr>
-  <p>© 2025 Unscrub. All rights reserved.</p>
+  <p>Keep unscrubbing!</p>
 </body>
 </html>
