--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -1,49 +1,70 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-   "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy</title>
-  <style type="text/css">
+  <style>
     body {
-      background-color: #C0C0C0;
-      font-family: "Times New Roman", Times, serif;
-      text-align: center;
-      color: #000000;
+      margin: 0;
+      font-family: "Arial", sans-serif;
+      background-color: #f0f0f0;
+      color: #333;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
     }
-    .container {
-      width: 600px;
-      margin: 50px auto;
-      padding: 20px;
-      background-color: #FFFFFF;
-      border: 2px solid #000000;
-    }
+
     h1 {
-      font-size: 24pt;
-      margin-bottom: 20px;
+      margin-top: 40px;
+      font-size: 2rem;
+      text-align: center;
+      color: #222;
     }
-    hr {
-      border: 1px solid #000000;
+
+    .container {
+      max-width: 600px;
+      width: 90%;
+      background-color: #fff;
+      padding: 30px 20px;
+      margin: 20px 0;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      text-align: left;
     }
+
     p {
-      font-size: 12pt;
-      line-height: 1.5;
+      font-size: 1rem;
+      line-height: 1.6;
+      margin-bottom: 1rem;
+    }
+
+    hr {
+      border: none;
+      border-top: 1px solid #ccc;
+      margin: 20px 0;
+      width: 80%;
+    }
+
+    footer {
+      margin-bottom: 30px;
+      font-style: italic;
+      color: #555;
     }
   </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <hr>
   <div class="container">
     <p>
-      While you play Unscrub, we respect your privacy. We do not collect, sell, or store any of your personal data.  
-      Everything you do on our site stays completely private. Not even the creator can see it.
+      While you play Unscrub, we respect your privacy. We do not collect, sell, or store any of your personal data. Everything you do on our site stays completely private. Not even the creator can see it.
     </p>
     <p>
       Thank you for visiting! We promise your information is safe and secure.
     </p>
   </div>
   <hr>
-  <p>Keep unscrubbing!</p>
+  <footer>Keep unscrubbing!</footer>
 </body>
 </html>
