--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="word-box" id="wordBox">Press Generate</div>
 
     <div class="input-section">
-      <input type="text" id="guessInput" placeholder="Type your guess..." autocomplete="off">
+      <input type="text" id="guessInput" placeholder="Type here to guess..." autocomplete="off">
       <button id="submitBtn" type="button">Enter</button>
     </div>
 
@@ -31,7 +31,7 @@
 
     <div class="button-group">
       <button id="generateBtn" type="button">Generate</button>
-      <button id="giveUpBtn" type="button">I give up</button>
+      <button id="giveUpBtn" type="button">Show Answer</button>
     </div>
 
     <div id="results"></div>
