--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
 
     <div class="word-box" id="wordBox">Press Generate</div>
 
-    <div class="input-section">
-      <input type="text" id="guessInput" placeholder="Type here to guess..." autocomplete="off">
-      <button id="submitBtn" type="button">Enter</button>
-    </div>
+<div class="input-section">
+  <input type="text" id="guessInput" placeholder="Type here to guess..." autocomplete="off">
+  <button id="submitBtn" type="button" aria-label="Submit guess">
+    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+      <g id="SVGRepo_iconCarrier">
+        <path d="M9 5L14.15 10C14.4237 10.2563 14.6419 10.5659 14.791 10.9099C14.9402 11.2539 15.0171 11.625 15.0171 12C15.0171 12.375 14.9402 12.7458 14.791 13.0898C14.6419 13.4339 14.4237 13.7437 14.15 14L9 19" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+      </g>
+    </svg>
+  </button>
+</div>
 
     <div class="input-divider"></div>
 
