--- a/index.html
+++ b/index.html
@@ -22,26 +22,25 @@
 
     <div class="word-box" id="wordBox">Press Generate</div>
 
-<div class="input-section">
-  <input type="text" id="guessInput" placeholder="Type here to guess..." autocomplete="off">
-  <button id="submitBtn" type="button" aria-label="Submit guess">
-    <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
-      <g id="SVGRepo_iconCarrier">
-        <path d="M2 12.0701H22" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-        <path d="M16 5L21.16 10C21.4324 10.2571 21.6494 10.567 21.7977 10.9109C21.946 11.2548 22.0226 11.6255 22.0226 12C22.0226 12.3745 21.946 12.7452 21.7977 13.0891C21.6494 13.433 21.4324 13.7429 21.16 14L16 19" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-      </g>
-    </svg>
-  </button>
-</div>
-    
-    <div class="input-divider"></div>
-
-    <div class="button-group">
-      <button id="generateBtn" type="button">Generate</button>
-      <button id="giveUpBtn" type="button">Show Answer</button>
+    <div class="input-section">
+      <input type="text" id="guessInput" placeholder="Type here to guess..." autocomplete="off">
+      <button id="submitBtn" type="button" aria-label="Submit guess">
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+          <g id="SVGRepo_iconCarrier">
+            <path d="M2 12.0701H22" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+            <path d="M16 5L21.16 10C21.4324 10.2571 21.6494 10.567 21.7977 10.9109C21.946 11.2548 22.0226 11.6255 22.0226 12C22.0226 12.3745 21.946 12.7452 21.7977 13.0891C21.6494 13.433 21.4324 13.7429 21.16 14L16 19" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+          </g>
+        </svg>
+      </button>
     </div>
 
     <div id="results"></div>
+  </div>
+
+  <!-- Separated bottom section -->
+  <div class="bottom-section">
+    <button id="generateBtn" type="button">Generate</button>
+    <button id="giveUpBtn" type="button">Show Answer</button>
   </div>
 
   <script src="script.js"></script>
