--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
   <title>Unscrub</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
+  <style>
+    /* Add this to support the new bottom section */
+    .bottom-section {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin-top: 25px;
+    }
+  </style>
 </head>
 <body>
   
-  <div id="wpmDisplay" style="color: green; font-size: 18px; margin: 10px 0;">
-    . . . /wpm
-  </div>
+  <div id="wpmDisplay">. . . /wpm</div>
 
   <button id="howToPlayBtn">How To Play</button>
   <button id="privacyBtn">Privacy Policy</button>
@@ -25,7 +32,7 @@
     <div class="input-section">
       <input type="text" id="guessInput" placeholder="Type here to guess..." autocomplete="off">
       <button id="submitBtn" type="button" aria-label="Submit guess">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g id="SVGRepo_iconCarrier">
             <path d="M2 12.0701H22" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
             <path d="M16 5L21.16 10C21.4324 10.2571 21.6494 10.567 21.7977 10.9109C21.946 11.2548 22.0226 11.6255 22.0226 12C22.0226 12.3745 21.946 12.7452 21.7977 13.0891C21.6494 13.433 21.4324 13.7429 21.16 14L16 19" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -35,12 +42,12 @@
     </div>
 
     <div id="results"></div>
-  </div>
 
-  <!-- Separated bottom section -->
-  <div class="bottom-section">
-    <button id="generateBtn" type="button">Generate</button>
-    <button id="giveUpBtn" type="button">Show Answer</button>
+    <!-- Buttons moved below inside the same visual container -->
+    <div class="bottom-section">
+      <button id="generateBtn" type="button">Generate</button>
+      <button id="giveUpBtn" type="button">Show Answer</button>
+    </div>
   </div>
 
   <script src="script.js"></script>
