--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
   <style>
-    /* Add this to support the new bottom section */
+    /* bottom section styling */
     .bottom-section {
       display: flex;
       justify-content: center;
       gap: 15px;
-      margin-top: 25px;
+      margin-top: 30px;
     }
   </style>
 </head>
@@ -42,12 +42,12 @@
     </div>
 
     <div id="results"></div>
+  </div>
 
-    <!-- Buttons moved below inside the same visual container -->
-    <div class="bottom-section">
-      <button id="generateBtn" type="button">Generate</button>
-      <button id="giveUpBtn" type="button">Show Answer</button>
-    </div>
+  <!-- New separate section below the game -->
+  <div class="bottom-section">
+    <button id="generateBtn" type="button">Generate</button>
+    <button id="giveUpBtn" type="button">Show Answer</button>
   </div>
 
   <script src="script.js"></script>
