--- a/index.html
+++ b/index.html
@@ -8,12 +8,20 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
   <style>
-    /* bottom section styling */
+    /* Wraps everything so buttons sit below */
+    .main-wrapper {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      gap: 25px; /* gap between game and buttons */
+    }
+
     .bottom-section {
       display: flex;
       justify-content: center;
       gap: 15px;
-      margin-top: 30px;
     }
   </style>
 </head>
@@ -24,30 +32,35 @@
   <button id="howToPlayBtn">How To Play</button>
   <button id="privacyBtn">Privacy Policy</button>
 
-  <div class="container">
-    <h1>Unscrub</h1>
+  <!-- wrapper to stack the main container and buttons vertically -->
+  <div class="main-wrapper">
 
-    <div class="word-box" id="wordBox">Press Generate</div>
+    <div class="container">
+      <h1>Unscrub</h1>
 
-    <div class="input-section">
-      <input type="text" id="guessInput" placeholder="Type here to guess..." autocomplete="off">
-      <button id="submitBtn" type="button" aria-label="Submit guess">
-        <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <g id="SVGRepo_iconCarrier">
-            <path d="M2 12.0701H22" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-            <path d="M16 5L21.16 10C21.4324 10.2571 21.6494 10.567 21.7977 10.9109C21.946 11.2548 22.0226 11.6255 22.0226 12C22.0226 12.3745 21.946 12.7452 21.7977 13.0891C21.6494 13.433 21.4324 13.7429 21.16 14L16 19" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
-          </g>
-        </svg>
-      </button>
+      <div class="word-box" id="wordBox">Press Generate</div>
+
+      <div class="input-section">
+        <input type="text" id="guessInput" placeholder="Type here to guess..." autocomplete="off">
+        <button id="submitBtn" type="button" aria-label="Submit guess">
+          <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g id="SVGRepo_iconCarrier">
+              <path d="M2 12.0701H22" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+              <path d="M16 5L21.16 10C21.4324 10.2571 21.6494 10.567 21.7977 10.9109C21.946 11.2548 22.0226 11.6255 22.0226 12C22.0226 12.3745 21.946 12.7452 21.7977 13.0891C21.6494 13.433 21.4324 13.7429 21.16 14L16 19" stroke="#ffffff" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"></path>
+            </g>
+          </svg>
+        </button>
+      </div>
+
+      <div id="results"></div>
     </div>
 
-    <div id="results"></div>
-  </div>
+    <!-- Separate section below the game -->
+    <div class="bottom-section">
+      <button id="generateBtn" type="button">Generate</button>
+      <button id="giveUpBtn" type="button">Show Answer</button>
+    </div>
 
-  <!-- New separate section below the game -->
-  <div class="bottom-section">
-    <button id="generateBtn" type="button">Generate</button>
-    <button id="giveUpBtn" type="button">Show Answer</button>
   </div>
 
   <script src="script.js"></script>
