--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
       align-items: center;
       justify-content: center;
       height: 100vh;
-      gap: 25px; /* spacing between game and buttons */
+      gap: 25px; /* space between game and button section */
     }
 
-    /* Bottom section styled like container */
+    /* Bottom section styled like the main game container */
     .bottom-section {
-      width: 480px;
+      width: 480px; /* same width as .container */
       text-align: center;
       background: linear-gradient(145deg, #151515, #1b1b1b);
       padding: 25px;
@@ -66,7 +66,7 @@
       <div id="results"></div>
     </div>
 
-    <!-- Separate gray background section below the game -->
+    <!-- Separate section below the game -->
     <div class="bottom-section">
       <button id="generateBtn" type="button">Generate</button>
       <button id="giveUpBtn" type="button">Show Answer</button>
