--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -7,50 +7,68 @@
   <style>
     body {
       margin: 0;
-      font-family: "Arial", sans-serif;
-      background-color: #f0f0f0;
-      color: #333;
+      font-family: "Inter", "Segoe UI", Arial, sans-serif;
+      background-color: #1e1e1e;
+      color: #e0e0e0;
       display: flex;
       flex-direction: column;
       align-items: center;
       min-height: 100vh;
+      padding: 0 1rem;
     }
 
     h1 {
-      margin-top: 40px;
-      font-size: 2rem;
+      margin-top: 60px;
+      font-size: 2.2rem;
       text-align: center;
-      color: #222;
+      color: #f1f1f1;
+      letter-spacing: 1px;
     }
 
     .container {
-      max-width: 600px;
-      width: 90%;
-      background-color: #fff;
-      padding: 30px 20px;
-      margin: 20px 0;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      max-width: 700px;
+      width: 100%;
+      background: #2b2b2b;
+      padding: 40px 30px;
+      margin: 30px 0;
+      border-radius: 14px;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
       text-align: left;
+      transition: background 0.3s ease;
+    }
+
+    .container:hover {
+      background: #323232;
     }
 
     p {
       font-size: 1rem;
-      line-height: 1.6;
-      margin-bottom: 1rem;
+      line-height: 1.7;
+      margin-bottom: 1.2rem;
+      color: #cfcfcf;
     }
 
     hr {
       border: none;
-      border-top: 1px solid #ccc;
-      margin: 20px 0;
+      border-top: 1px solid #444;
+      margin: 30px 0;
       width: 80%;
     }
 
     footer {
-      margin-bottom: 30px;
+      margin-bottom: 40px;
       font-style: italic;
-      color: #555;
+      color: #aaa;
+      font-size: 0.95rem;
+    }
+
+    @media (max-width: 600px) {
+      .container {
+        padding: 25px 20px;
+      }
+      h1 {
+        font-size: 1.8rem;
+      }
     }
   </style>
 </head>
@@ -58,13 +76,13 @@
   <h1>Privacy Policy</h1>
   <div class="container">
     <p>
-      While you play Unscrub, we respect your privacy. We do not collect, sell, or store any of your personal data. Everything you do on our site stays completely private. Not even the creator can see it.
+      while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.
     </p>
     <p>
-      Thank you for visiting! We promise your information is safe and secure.
+      thank you for visiting! we promise your information is safe and secure.
     </p>
   </div>
   <hr>
-  <footer>Keep unscrubbing!</footer>
+  <footer>keep unscrubbing!</footer>
 </body>
 </html>
