--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
 
   </div>
 
-  <script src="script.js"></script>
+<script src="script.js"></script>
+<script src="type.js"></script>
 </body>
 </html>
