--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 
   <div class="main-wrapper">
 
-    <div class="container">
-      <h1>Unscrub</h1>
+<div class="container">
+  <img src="/images/unscrub-logo.png" alt="Unscrub Logo" class="logo">
+</div>
+
 
       <div class="word-box" id="wordBox">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
