--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
   <div class="main-wrapper">
 
 <div class="container">
-  <img src="/images/unscrub-logo.png" alt="Unscrub Logo" class="logo">
-</div>
+  <h1>Unscrub</h1>
 
 
       <div class="word-box" id="wordBox">
