--- a/index.html
+++ b/index.html
@@ -45,6 +45,13 @@
       from { transform: rotate(0deg); }
       to { transform: rotate(360deg); }
     }
+
+    .logo {
+  width: 120px; /* nice small size */
+  height: auto;
+  vertical-align: middle;
+}
+
   </style>
 </head>
 <body>
@@ -57,7 +64,9 @@
   <div class="main-wrapper">
 
 <div class="container">
-  <h1>Unscrub</h1>
+  <img src="/images/unscrub-logo.png" alt="Unscrub Logo" class="logo">
+</div>
+
 
 
       <div class="word-box" id="wordBox">
