--- a/index.html
+++ b/index.html
@@ -45,13 +45,6 @@
       from { transform: rotate(0deg); }
       to { transform: rotate(360deg); }
     }
-
-    .logo {
-  width: 120px; /* nice small size */
-  height: auto;
-  vertical-align: middle;
-}
-
   </style>
 </head>
 <body>
@@ -63,11 +56,8 @@
 
   <div class="main-wrapper">
 
-<div class="container">
-  <img src="/images/unscrub-logo.png" alt="Unscrub Logo" class="logo">
-</div>
-
-
+    <div class="container">
+      <h1>Unscrub</h1>
 
       <div class="word-box" id="wordBox">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
