--- a/index.html
+++ b/index.html
@@ -45,15 +45,6 @@
       from { transform: rotate(0deg); }
       to { transform: rotate(360deg); }
     }
-
-    .logo {
-  width: 80px;
-  height: auto;
-  display: inline-block;
-  margin-bottom: 10px;
-  filter: drop-shadow(0 0 2px #000); /* optional lil glow */
-}
-
   </style>
 </head>
 <body>
@@ -65,10 +56,8 @@
 
   <div class="main-wrapper">
 
-<div class="container" style="text-align: center;">
-  <img src="/images/unscrub-logo.png" alt="Unscrub Logo" class="logo">
-</div>
-
+    <div class="container">
+      <h1>Unscrub</h1>
 
       <div class="word-box" id="wordBox">
         <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
