--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   
   <div id="wpmDisplay">. . . /wpm</div>
 
-<button id="howToPlayBtn">How To Play</button>
-<button id="privacyBtn">Privacy Policy</button>
+<button id="howToPlayBtn">How to Play</button>
+<button id="privacyBtn">Data Usage</button>
 <a href="https://github.com/pypppe/unscrub" target="_blank" style="text-decoration: none;">
   <button id="githubBtn" type="button">
     <svg viewBox="0 0 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#ffffff">
