--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 <body>
   
   <div id="wpmDisplay">. . . /wpm</div>
+  <p class="announcement">Unscrub is now on PlayStation!.</p>
 
 <button id="howToPlayBtn">How to Play</button>
 <button id="privacyBtn">Data Usage</button>
