--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <body>
   
   <div id="wpmDisplay">. . . /wpm</div>
-  <p class="announcement">Unscrub is now on PlayStation!.</p>
+  <p class="announcement">To the one kid in my school, i hope you are now happy.</p>
 
 <button id="howToPlayBtn">How to Play</button>
 <button id="privacyBtn">Data Usage</button>
