Update wpmDisplay content to 'An Astrarune Website.'

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body>
   
-  <div id="wpmDisplay">. . . /wpm</div>
+  <div id="wpmDisplay">An Astrarune Website.</div>
   <p class="announcement">WOAH MORE WORDS.</p>
 
 <button id="howToPlayBtn">How to Play</button>
