--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy</title>
   <style>
+    
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
+body, input, button, textarea, select, h1, .word-box, .result-item, #wpmDisplay, .correct-overlay {
+  font-family: 'Poppins', "Inter", Arial, sans-serif;
+}
     body {
       margin: 0;
       font-family: "Inter", "Segoe UI", Arial, sans-serif;
