--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -151,7 +151,7 @@ body, input, button, textarea, select, h1, .word-box, .result-item, #wpmDisplay,
     <p>thank you for visiting! we promise your information is safe and secure.</p>
   </div>
   <hr>
-<footer style="text-align:center; margin-top:20px; color:#aaa; font-size:0.95rem;">
+<footer id="footer" style="text-align:center; margin-top:20px; color:#aaa; font-size:0.95rem;">
   keep unscrubbing!
   <span style="display:inline-flex; align-items:center; gap:8px; margin-left:10px;">
     <svg viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
@@ -164,23 +164,21 @@ body, input, button, textarea, select, h1, .word-box, .result-item, #wpmDisplay,
           <path d="M0,10 C2,9.33333333 3.66666667,9 5,9 C6.33333333,9 7.66666667,9.33333333 9,10 C10.3333333,10.6666667 11.6666667,11 13,11 C14.3333333,11 16,10.6666667 18,10 L18,13 C16,13.6666667 14.3333333,14 13,14 C11.6666667,14 10.3333333,13.6666667 9,13 C7.66666667,12.3333333 6.33333333,12 5,12 C3.66666667,12 2,12.3333333 0,13 L0,10 Z" fill="#5B55FF"></path>
           <path d="M0,12 C2,11.3333333 3.66666667,11 5,11 C6.33333333,11 7.66666667,11.3333333 9,12 C10.3333333,12.6666667 11.6666667,13 13,13 C14.3333333,13 16,12.6666667 18,12 L18,15 C16,15.6666667 14.3333333,16 13,16 C11.6666667,16 10.3333333,15.6666667 9,15 C7.66666667,14.3333333 6.33333333,14 5,14 C3.66666667,14 2,14.3333333 0,15 L0,12 Z" fill="#AB56FF"></path>
         </g>
-        <path d="M5.77458164,22.2450743 C5.87119042,22.7888438 5.5086951,23.3079729 4.96492567,23.4045816 C4.42115625,23.5011904 3.90202714,23.1386951 3.80541836,22.5949257 L3.10541836,18.6549257 L0.802687133,5.58458794 C0.649974993,4.71843889 1.0810201,3.85417025 1.86476731,3.45507487 C3.51961878,2.61240064 4.97329859,2.07701762 6.23746312,1.8541113 C7.70809667,1.59479893 9.23551211,1.70257718 10.8090943,2.17063744 C12.093197,2.55259238 13.307701,2.63829082 14.4632215,2.43454139 C15.3882295,2.27143753 16.4936553,1.88496788 17.7708886,1.27093118 C18.7664061,0.792229721 19.9614716,1.21127271 20.4400872,2.20682182 C20.5192437,2.37147221 20.5754681,2.54619162 20.6071918,2.72610581 L22.6763579,14.4609297 C22.8291099,15.3270964 22.3980599,16.1913938 21.6142935,16.5904992 C19.9594398,17.433175 18.5057582,17.9685589 17.2415923,18.1914654 C15.7709588,18.4507778 14.2435434,18.3429996 12.6699612,17.8749393 C11.3858584,17.4929844 10.1713544,17.4072859 9.01583397,17.6110354 C7.96858501,17.7956936 6.69383831,18.2656275 5.20250121,19.0250788 L5.77458164,22.2450743 Z" fill="#000000" fill-rule="nonzero"></path>
+        <path d="M5.77458164,22.2450743 C5.87119042,22.7888438 5.5086951,23.3079729 4.96492567,23.4045816 C4.42115625,23.5011904 3.90202714,23.1386951 3.80541836,22.5949257 L3.10541836,18.6549257 L0.802687133,5.58458794 C0.649974993,4.71843889 1.0810201,3.85417025 1.86476731,3.45507487 C3.51961878,2.61240064 4.97329859,2.07701762 6.23746312,1.8541113 C7.70809667,1.59479893 9.23551211,1.70257718 10.8090943,2.17063744 C12.093197,2.55259238 13.307701,2.63829082 14.4632215,2.43454139 C15.3882295,2.27143753 16.4936553,1.88496788 17.7708886,1.27093118 C18.7664061,0.792229721 19.9614716,1.21127271 20.4400872,2.20682182 C20.5192437,2.37147221 20.5754681,2.54619162 20.6071918,2.72610581 L22.6763579,14.4609297 C22.8291099,15.3270964 22.3980599,16.1913938 21.6142935,16.5904992 C19.9594398,17.433175 18.5057582,17.9685589 17.2415923,18.1914654 C15.7709588,18.4507778 14.2435434,18.3429996 12.6699612,17.8749393 C11.3858584,17.4929844 10.1713544,17.4072859 9.01583397,17.6110354 C7.96858501,17.7956936 6.69383831,18.2656275 5.20250121,19.0250788 L5.77458164,22.2450743 Z" fill="#000000"></path>
       </g>
     </svg>
     <span>supporting lgbt / wspieranie lgbt</span>
   </span>
 </footer>
 
-
-
-  <script>
-    const dropdownBtn = document.getElementById('dropdownBtn');
-    const dropdownOptions = document.getElementById('dropdownOptions');
-    const flagIcon = document.getElementById('flagIcon');
-    const langLabel = document.getElementById('langLabel');
-    const content = document.getElementById('content');
-    const title = document.querySelector('h1');
-    const footer = document.querySelector('footer');
+<script>
+  const dropdownBtn = document.getElementById('dropdownBtn');
+  const dropdownOptions = document.getElementById('dropdownOptions');
+  const flagIcon = document.getElementById('flagIcon');
+  const langLabel = document.getElementById('langLabel');
+  const content = document.getElementById('content');
+  const title = document.querySelector('h1');
+  const footer = document.getElementById('footer');
 
     const flags = {
       en: `<svg viewBox="0 -4 28 28" fill="none" xmlns="http://www.w3.org/2000/svg"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"> <g clip-path="url(#clip0_1310_7593)"> <path d="M28 0H0V20H28V0Z" fill="url(#paint0_linear_1310_7593)"></path> <path fill-rule="evenodd" clip-rule="evenodd" d="M12 8H0V12H12V20H16V12H28V8H16V0H12V8Z" fill="url(#paint1_linear_1310_7593)"></path> </g> <defs> <linearGradient id="paint0_linear_1310_7593" x1="14" y1="0" x2="14" y2="20" gradientUnits="userSpaceOnUse"> <stop stop-color="white"></stop> <stop offset="1" stop-color="#F0F0F0"></stop> </linearGradient> <linearGradient id="paint1_linear_1310_7593" x1="14" y1="0" x2="14" y2="20" gradientUnits="userSpaceOnUse"> <stop stop-color="#E82739"></stop> <stop offset="1" stop-color="#CA1A2B"></stop> </linearGradient> <clipPath id="clip0_1310_7593"> <rect width="28" height="20" rx="2" fill="white"></rect> </clipPath> </defs> </g></svg>`,
