--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -52,6 +52,25 @@ h1 {
   border-color: #555;
 }
 
+.go-back-btn {
+  position: absolute;
+  top: 15px;
+  left: 150px;
+  background: #111;
+  color: #fff;
+  border: 1px solid #333;
+  font-size: 0.95rem;
+  cursor: pointer;
+  padding: 6px 10px;
+  border-radius: 0;
+  transition: background 0.2s ease, border-color 0.2s ease;
+}
+
+.go-back-btn:hover {
+  background: #222;
+  border-color: #555;
+}
+
 .flag {
   width: 24px;
   height: 24px;
@@ -124,6 +143,8 @@ footer {
     <span id="langLabel">English</span>
   </div>
 
+  <button id="goBackBtn" class="go-back-btn">Go back</button>
+
   <div class="dropdown-options" id="dropdownOptions">
     <div class="dropdown-option" data-lang="en">
       <span class="flag">
@@ -175,51 +196,53 @@ const flags = {
   pl: `<svg viewBox="0 0 36 36" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid meet" fill="#000000"><path fill="#EEE" d="M32 5H4a4 4 0 0 0-4 4v9h36V9a4 4 0 0 0-4-4z"></path><path fill="#DC143C" d="M0 27a4 4 0 0 0 4 4h28a4 4 0 0 0 4-4v-9H0v9z"></path></svg>`
 };
 
+function setLanguage(lang) {
+  if (lang === 'pl') {
+    title.textContent = 'Twoje dane i użytkowanie';
+    content.innerHTML = `
+      <p>podczas gry w unscrub szanujemy twoją prywatność. nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych twoich danych osobowych. wszystko, co robisz na naszej stronie, pozostaje całkowicie prywatne — nawet twórca nie ma do tego dostępu.</p>
+      <p>dziękujemy za odwiedziny! obiecujemy, że twoje informacje są bezpieczne i chronione.</p>`;
+    footer.textContent = 'kontynuuj unscrubowanie!';
+    langLabel.textContent = 'Polski';
+  } else {
+    title.textContent = 'Your Data & Usage';
+    content.innerHTML = `
+      <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
+      <p>thank you for visiting! we promise your information is safe and secure.</p>`;
+    footer.textContent = 'keep unscrubbing!';
+    langLabel.textContent = 'English';
+  }
+  flagIcon.innerHTML = flags[lang];
+  localStorage.setItem('preferredLanguage', lang);
+  dropdownOptions.style.display = 'none';
+}
 
+dropdownBtn.addEventListener('click', () => {
+  dropdownOptions.style.display = dropdownOptions.style.display === 'flex' ? 'none' : 'flex';
+});
 
-  function setLanguage(lang) {
-    if (lang === 'pl') {
-      title.textContent = 'Twoje dane i użytkowanie';
-      content.innerHTML = `
-        <p>podczas gry w unscrub szanujemy twoją prywatność. nie zbieramy, nie sprzedajemy ani nie przechowujemy żadnych twoich danych osobowych. wszystko, co robisz na naszej stronie, pozostaje całkowicie prywatne — nawet twórca nie ma do tego dostępu.</p>
-        <p>dziękujemy za odwiedziny! obiecujemy, że twoje informacje są bezpieczne i chronione.</p>`;
-      footer.textContent = 'kontynuuj unscrubowanie!';
-      langLabel.textContent = 'Polski';
-    } else {
-      title.textContent = 'Your Data & Usage';
-      content.innerHTML = `
-        <p>while you play unscrub, we respect your privacy. we do not collect, sell, or store any of your personal data. everything you do on our site stays completely private — not even the creator can see it.</p>
-        <p>thank you for visiting! we promise your information is safe and secure.</p>`;
-      footer.textContent = 'keep unscrubbing!';
-      langLabel.textContent = 'English';
-    }
-    flagIcon.innerHTML = flags[lang];
-    localStorage.setItem('preferredLanguage', lang);
+dropdownOptions.addEventListener('click', (e) => {
+  const option = e.target.closest('.dropdown-option');
+  if (option) setLanguage(option.dataset.lang);
+});
+
+const savedLang = localStorage.getItem('preferredLanguage');
+if (savedLang) setLanguage(savedLang);
+else {
+  const userLang = navigator.language || navigator.userLanguage;
+  if (userLang.toLowerCase().startsWith('pl')) setLanguage('pl');
+  else setLanguage('en');
+}
+
+document.addEventListener('click', (e) => {
+  if (!dropdownBtn.contains(e.target) && !dropdownOptions.contains(e.target)) {
     dropdownOptions.style.display = 'none';
   }
+});
 
-  dropdownBtn.addEventListener('click', () => {
-    dropdownOptions.style.display = dropdownOptions.style.display === 'flex' ? 'none' : 'flex';
-  });
-
-  dropdownOptions.addEventListener('click', (e) => {
-    const option = e.target.closest('.dropdown-option');
-    if (option) setLanguage(option.dataset.lang);
-  });
-
-  const savedLang = localStorage.getItem('preferredLanguage');
-  if (savedLang) setLanguage(savedLang);
-  else {
-    const userLang = navigator.language || navigator.userLanguage;
-    if (userLang.toLowerCase().startsWith('pl')) setLanguage('pl');
-    else setLanguage('en');
-  }
-
-  document.addEventListener('click', (e) => {
-    if (!dropdownBtn.contains(e.target) && !dropdownOptions.contains(e.target)) {
-      dropdownOptions.style.display = 'none';
-    }
-  });
+document.getElementById('goBackBtn').addEventListener('click', () => {
+  window.location.href = 'https://unscrub.astrarune.com';
+});
 </script>
 </body>
 </html>
