Update privacy.html to include Polish translation for "GO Back" button

--- a/policy/privacy.html
+++ b/policy/privacy.html
@@ -143,7 +143,7 @@ footer {
     <span id="langLabel">English</span>
   </div>
 
-  <button id="goBackBtn" class="go-back-btn">Go back</button>
+  <button id="goBackBtn" class="go-back-btn">Go Back / Wracać</button>
 
   <div class="dropdown-options" id="dropdownOptions">
     <div class="dropdown-option" data-lang="en">
